/*
 * Copyright (C) 2020 bsyonline
 */
package com.rolex.alphax.creational.factory.simplefactory;

/**
 * @author rolex
 * @since 2020
 */
public class Benz extends Car {
    @Override
    public String toString() {
        return "奔驰 S400";
    }
}
